--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
 <head>
 <link rel="stylesheet" href="style.css">
-<title>Amazing & Creative Art!</title>
+<title>Black&white!</title>
 </head>
 <body>
-<h1> .</h1>
+<h1>Amazing & Creative Art! .</h1>
 <img src="IMG_0555.JPG">
 <p">.</p>
 <img src="IMG_0556.JPG">
