--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <p>.</p>
 <img src="IMG_0557.JPG">
 <p>.</p>
-<img src="">
-<img src="">
-<img src="">
+<img src="IMG_0558.JPG">
+<img src="IMG_0559.JPG">
+<img src="IMG_0560.JPG">
 <img src="">
 </body>
 </html>
