--- a/index.html
+++ b/index.html
@@ -6,14 +6,17 @@
 <body>
 <h1>Amazing & Creative Art! .</h1>
 <img src="IMG_0555.JPG">
-<p">.</p>
+<p"> !!</p>
 <img src="IMG_0556.JPG">
 <p>.</p>
 <img src="IMG_0557.JPG">
-<p>.</p>
+<p>Cloudy night.</p>
 <img src="IMG_0558.JPG">
+<p> Growing Creation.</p>
 <img src="IMG_0559.JPG">
+<P>Mountain High. </p>
 <img src="IMG_0560.JPG">
+<p>GOOGLE ART!</p>
 <img src="">
 </body>
 </html>
