--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 <body>
 <h1>Amazing & Creative Art! .</h1>
 <img src="IMG_0555.JPG">
-<p"> !!</p>
+<p">Weaving!!</p>
 <img src="IMG_0556.JPG">
-<p>.</p>
+<p>Wavy Trail.</p>
 <img src="IMG_0557.JPG">
 <p>Cloudy night.</p>
 <img src="IMG_0558.JPG">
