--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <title>Black&white!</title>
 </head>
 <body>
-<h1>Amazing & Creative Art! .</h1>
+<h1>Amazing & Creative Art!</h1>
 <img src="IMG_0555.JPG">
-<p">Weaving!!</p>
+<p">Weaving!</p>
 <img src="IMG_0556.JPG">
 <p>Wavy Trail.</p>
 <img src="IMG_0557.JPG">
@@ -16,7 +16,7 @@
 <img src="IMG_0559.JPG">
 <P>Mountain High. </p>
 <img src="IMG_0560.JPG">
-<p>GOOGLE ART!</p>
+<p id="first"> GOOGLE ART!</p>
 <img src="">
 </body>
 </html>
