--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 <h1>Amazing & Creative Art!</h1>
 <img src="IMG_0555.JPG">
-<p">Weaving!</p>
+<p>Weaving!</p>
 <img src="IMG_0556.JPG">
 <p>Wavy Trail.</p>
 <img src="IMG_0557.JPG">
