--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
 <head>
+
 <link rel="stylesheet" href="style.css">
 <title>Black&white!</title>
 </head>
 <body>
-<h1>Amazing & Creative Art!</h1>
-<img src="IMG_0555.JPG">
+<h1>Amazing & 0555.JPG">
 <p>Weaving!</p>
 <img src="IMG_0556.JPG">
 <p>Wavy Trail.</p>
