--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>Black&white!</title>
 </head>
 <body>
-<h1>Amazing & 0555.JPG">
+<h1>Amazing & creative art!">
 <p>Weaving!</p>
 <img src="IMG_0556.JPG">
 <p>Wavy Trail.</p>
