--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
 </head>
 <body>
 <h1>Amazing & creative art!>
-<p>Weaving!</p>
+<p id="cool">Weaving!</p>
 <img src="IMG_0556.JPG">
-<p>Wavy Trail.</p>
+<p id="hello">Wavy Trail.</p>
 <img src="IMG_0557.JPG">
-<p>Cloudy night.</p>
+<p id="bye">Cloudy night.</p>
 <img src="IMG_0558.JPG">
-<p> Growing Creation.</p>
+<p id="hi"> Growing Creation.</p>
 <img src="IMG_0559.JPG">
-<P>Mountain High. </p>
+<P id="last">Mountain High. </p>
 <img src="IMG_0560.JPG">
 <p id="first">GOOGLE ART!</p>
 <img src="">
