--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Black&white!</title>
 </head>
 <body>
-<h1>Amazing & creative art!>
+<h1>Amazing & creative art!</h1>
 <p id="cool">Weaving!</p>
 <img src="IMG_0556.JPG">
 <p id="hello">Wavy Trail.</p>
