--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
 </head>
 <body>
 <h1>Amazing & creative art!</h1>
-<p id="cool">Weaving!</p>
-<img src="IMG_0556.JPG">
-<p id="hello">Wavy Trail.</p>
-<img src="IMG_0557.JPG">
-<p id="bye">Cloudy night.</p>
-<img src="IMG_0558.JPG">
-<p id="hi"> Growing Creation.</p>
-<img src="IMG_0559.JPG">
-<P id="last">Mountain High. </p>
-<img src="IMG_0560.JPG">
-<p id="first">GOOGLE ART!</p>
+<p>Weaving!</p>
+<img  id="last" src="IMG_0556.JPG">
+<p>Wavy Trail.</p>
+<img id="last" src="IMG_0557.JPG">
+<p>Cloudy night.</p>
+<img id="last" src="IMG_0558.JPG">
+<p> Growing Creation.</p>
+<img id="last" src="IMG_0559.JPG">
+<P>Mountain High. </p>
+<img id="first" src="IMG_0560.JPG">
+<p>GOOGLE ART!</p>
 <img src="">
 </body>
 </html>
