--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 <body>
 <h1>Amazing & creative art!</h1>
 <p>Weaving!</p>
-<img  id="last" src="IMG_0556.JPG">
+<img  id="okay" src="IMG_0556.JPG">
 <p>Wavy Trail.</p>
-<img id="last" src="IMG_0557.JPG">
+<img id="hi" src="IMG_0557.JPG">
 <p>Cloudy night.</p>
-<img id="last" src="IMG_0558.JPG">
+<img id="bye" src="IMG_0558.JPG">
 <p> Growing Creation.</p>
 <img id="last" src="IMG_0559.JPG">
 <P>Mountain High. </p>
