--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<head>
+<head><link href="favicon.ico" rel="icon" type="image/x-icon" />
 <link rel="stylesheet" href="style.css">
 <title>Black&white!</title>
 </head>
