--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
-<head><link href="favicon.ico" rel="icon" type="image/x-icon" />
+<head>
+<link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
+<link href="favicon.ico" rel="icon" type="image/x-icon" />
 <link rel="stylesheet" href="style.css">
 <title>Black&white!</title>
 </head>
