--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>Black&white!</title>
 </head>
 <body>
-<h1>Amazing & creative art!</h1>
+<h1>Amazing & Creative Art!</h1>
 <img  id="okay" src="IMG_0556.JPG">
 <p>Wavy Trail.</p>
 <img id="hi" src="IMG_0557.JPG">
