--- a/index.html
+++ b/index.html
@@ -18,5 +18,11 @@
 <img id="first" src="IMG_0560.JPG">
 <p>GOOGLE ART!</p>
 <img src="">
+<ul>
+  <li> Art </li>
+  <li> pictures </li>
+  <li> drawings </li>
+</ul>
+<a href="new.html"> My other page </a>
 </body>
 </html>
