--- a/new.html
+++ b/new.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1>Amazing & Creative Art!</h1>
-<p>Cloudy night.                     Mountain High. </p>
+<p>Cloudy night                     Mountain High </p>
 <img id="hi" src="IMG_0557.JPG">    <img id="last" src="IMG_0559.JPG">
 <ul>
   <li> Art </li>
