--- a/new.html
+++ b/new.html
@@ -8,8 +8,4 @@
 <body>
 <h1>Amazing & Creative Art!</h1>
 <img id="hi" src="IMG_0557.JPG">    <img id="last" src="IMG_0559.JPG">
-<ul>
-  <li> Art </li>
-  <li> pictures </li>
-  <li> drawings </li>
-</ul>
+<p>   <li> Art </li>    <li> pictures </li>    <li> drawings </li>  </p>
