--- a/new.html
+++ b/new.html
@@ -8,4 +8,6 @@
 <body>
 <h1>Amazing & Creative Art!</h1>
 <img id="hi" src="IMG_0557.JPG">    <img id="last" src="IMG_0559.JPG">
-<p>   <li> Art </li>    <li> pictures </li>    <li> drawings </li>  </p>
+<p>Art</p>    <p>pictures</p>    <p>drawings</p>
+</body>
+</html>
