--- a/new.html
+++ b/new.html
@@ -6,8 +6,8 @@
 <title>Black&white!</title>
 </head>
 <body>
-<h1>Amazing & Creative Art!</h1>
-<img id="hi" src="IMG_0557.JPG">    <img id="last" src="IMG_0559.JPG">
-<p>Art</p>    <p>pictures</p>    <p>drawings</p>
+<h1 id="cool" Amazing & Creative Art!</h1>
+<img id="dog" src="IMG_0557.JPG">    <img id="cat" src="IMG_0559.JPG">
+<p>Art</p>    <p id="pie" pictures</p>    <p id="cake" drawings</p>
 </body>
 </html>
